--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node public/javascripts/horoscope.js"
   },
   "dependencies": {
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0-alpha3",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "docker": "^0.2.14",
     "express": "^4.18.2",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
